--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
     "name": "q-tool-cli",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "main": "./lib/index.js",
-    "typings": "./lib/index.d.ts",
     "bin": {
         "q-tool": "bin/index.js"
     },
     "files": [
         "bin",
-        "lib"
+        "lib",
+        "q.config.ts"
     ],
     "scripts": {
         "dev": "nodemon",
+        "build": "tsc -p tsconfig.json",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
