--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     },
     "keywords": [
         "cli",
-        "commander",
-        "react-cli"
+        "commander"
     ],
     "author": "qwk",
     "license": "ISC",
@@ -30,8 +29,7 @@
         "@types/node": "^17.0.8",
         "babel-loader": "^8.2.3",
         "nodemon": "^2.0.15",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.5.4"
+        "ts-node": "^10.5.0"
     },
     "dependencies": {
         "commander": "^8.3.0",
@@ -49,8 +47,10 @@
         "postcss": "^8.4.5",
         "postcss-loader": "^6.2.1",
         "q-cli-template": "^0.0.3",
+        "readline": "^1.3.0",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
+        "typescript": "^4.5.5",
         "url-loader": "^4.1.1",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0",
