--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "q-tool-cli",
-    "version": "0.1.3",
+    "version": "0.2.0",
     "main": "./lib/index.js",
     "bin": {
         "q-tool": "bin/index.js"
@@ -46,7 +46,7 @@
         "ora": "^5.4.1",
         "postcss": "^8.4.5",
         "postcss-loader": "^6.2.1",
-        "q-cli-template": "^0.1.1",
+        "q-cli-template": "^0.1.2",
         "readline": "^1.3.0",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
@@ -66,5 +66,9 @@
     "directories": {
         "lib": "lib"
     },
-    "description": "脚手架工具"
+    "description": "脚手架工具",
+    "bugs": {
+        "url": "https://github.com/qiuweikangdev/q-tool-cli/issues"
+    },
+    "homepage": "https://github.com/qiuweikangdev/q-tool-cli#readme"
 }
