--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "q-tool-cli",
-    "version": "0.2.0",
+    "version": "1.0.0",
     "main": "./lib/index.js",
     "bin": {
         "q-tool": "bin/index.js"
@@ -24,7 +24,7 @@
     "devDependencies": {
         "@types/commander": "^2.12.2",
         "@types/ejs": "^3.1.0",
-        "@types/inquirer": "^8.1.3",
+        "@types/inquirer": "^8.2.0",
         "@types/lodash": "^4.14.178",
         "@types/node": "^17.0.8",
         "babel-loader": "^8.2.3",
@@ -36,7 +36,6 @@
         "css-loader": "^6.6.0",
         "download-git-repo": "^3.0.2",
         "ejs": "^3.1.6",
-        "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^7.2.1",
         "html-webpack-plugin": "^5.5.0",
         "inquirer": "^8.2.0",
@@ -46,12 +45,12 @@
         "ora": "^5.4.1",
         "postcss": "^8.4.5",
         "postcss-loader": "^6.2.1",
-        "q-cli-template": "^0.1.2",
+        "q-cli-template": "^1.0.0",
         "readline": "^1.3.0",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.5",
-        "url-loader": "^4.1.1",
+        "update-notifier": "^5.1.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0",
         "vue-template-compiler": "^2.6.14",
